# african-easterly-waves

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: METHODS.md  PLAIN_SUMMARY.md
scripts/: aewc_crosscheck.py  build_deposit.py  check_track_alignment.py  control_model.py  crosscheck_huang_gridsat.py  demo_basepoint_map.py  demo_hovmoller.py  deposit_readme_template.md  download_era5.py  download_era5_env.py  download_era5_global.py  download_gridsat.py  download_gridsat_jas.py  fig2_real.py  fig4_real.py  fig_control_model.py  fig_ct_genesis.py  fig_ct_wave_following.py  fig_developing.py  fig_east_genesis.py  fig_exceedance.py  fig_fingerprint.py  fig_leadlag.py  fig_moisture_budget.py  fig_organization_axis.py  fig_precondition.py  fig_schematic.py  fig_supply_contrast.py  fig_validation.py  fig_wave_following.py  fig_wave_following_strat.py  run_gridsat_track.py  sensitivity_response.py  validate_basepoint.py  validate_heldout.py  validate_inhouse_vs_isccp.py  validate_multimonth.py  wk_independence.py
src/aew/: __init__.py  binning.py  composites.py  core.py  environment.py  events.py  filtering.py  leadlag.py  plotting.py  thermo.py  tracks.py  (+2 more)
tests/: test_aewc_dedup.py  test_binning.py  test_composites.py  test_environment.py  test_era5_load_years.py  test_era5_requests.py  test_events.py  test_filtering.py  test_gridsat_track.py  test_huang.py  test_integration_fig2.py  test_leadlag.py  test_maps.py  test_plotting.py  test_pyflextrkr_adapter.py  test_thermo.py  test_tracks.py  test_trajectory.py  test_wave_relative.py  test_waves.py  test_wk_filter.py
(+8 files in other folders)
